yupgup.css
/*
  ¸.·´¯`·.´¯`·.¸¸.·´¯`·.¸><(((º>
  YupGup.com CSS File
  Version: 1.0 - A Strange New Place

  This file is meant to read by machines *and* humans
  and thus should be thoroughly enjoyable.
*/

/*
  CONFIG
  Gotta keep it all configured.
  For the kids: https://youtu.be/XN32lLUOBzQ
*/

:root {
  /* Palette */
  --mandy          : #E54859;
  --brick          : #C44057;
  --dusk           : #AB3A58;
  --camelot        : #8B335B;
  --finn           : #683057;
  --bossanova      : #512C57;

  --dark-gray      : #191919;
  --med-gray       : #555555;
  --light-gray     : #DDDDDD;

  /* Grid & Spacing */
  --site-width     : 1100px;
  --gutters        : 1.25rem;
  --space          : 1rem;
  --block-space    : calc(var(--space) * 2);

  /* Typography */
  --font-size      : 18px;
}

/*
  FONTS
  Setup our fonts, since they're a dependency and can block. Get that whole
  mess out of the way. Have you ever tried to say "fonts" backwards?

  Stnof.
*/

@font-face {
  font-family: 'SofiaPro';
  src: url('fonts/sofiapro-regular.woff2') format('woff2'),
       url('fonts/sofiapro-regular.woff') format('woff');
  font-weight: normal;
}

@font-face {
  font-family: 'SofiaPro';
  src: url('fonts/sofiapro-bold.woff2') format('woff2'),
       url('fonts/sofiapro-bold.woff') format('woff');
  font-weight: bold;
}

/*
  RESET
  Ganked from: https://alligator.io/css/minimal-css-reset/
  Thanks @alligatorio for being rad af.
*/

html {
  box-sizing: border-box;
  /* Pray, *pray* to all the gods we don't ever hit Arial */
  font-family: 'SofiaPro', Helvetica, Arial, sans-serif;
  font-size: var(--font-size);
  font-weight: normal;
  color: var(--dark-gray);

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

*:before,
*:after {
  box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol, ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/*
  GLOBALS
*/
h1, h2, h3 {
  margin-bottom: .5rem;
  line-height: 1.2;
}

h2 {
  font-size: 1.7rem;
  font-weight: bolder;
}

h3 {
  font-size: 1.4rem;
  font-weight: bold;
}

p,
.lead {
  margin-bottom: var(--space);
}

.lead {
  font-size: 1.25rem;
}

p,
.siteMain li {
  line-height: 1.35;
}

.subHeading {
  position: relative;
  /*
    inline-block allows us to neatly have the border match the copy without extra markup. Consider a <span> if this needs to change.
  */
  display: inline-block;
}

.btn {
  display: inline-block;
  padding: .6em 1em;
  border: none;
  border-radius: .35em;
  background: var(--mandy);
  background: linear-gradient(to bottom, var(--mandy) 0%, #B2393B 100%);
  font-size: 1rem;
  font-weight: bold;
  line-height: 1;
  color: white;
  text-decoration: none;
  text-transform: uppercase;
  cursor: pointer;
}

.btn:hover {
  background: var(--dusk);
}

label {
  display: block;
  margin-bottom: .35em;
  font-weight: bold;
}

input {
  padding: .6em;
  font-size: 1rem;
}

.broughtBy {
  margin: 6px 0 0;
  font-size: .75rem;
  color: var(--med-gray);
}

/*
  THEMES
*/
.theme-brick {
  background: var(--brick);
  color: var(--bossanova);
}

.siteMain a,
.topHat span {
  padding-bottom: .15em;
  box-shadow: 0 -5px  rgba(104, 48, 87, .5) inset;
  text-decoration: none;
  color: var(--finn);
}

.siteMain a:hover,
.topHat:hover span {
  box-shadow: none;
}

/*
  ANIMATIONS
*/

@keyframes color-pulse {
  20% {
    fill: var(--mandy);
  }

  40% {
    fill: var(--brick);
    transform: rotateX(-10deg);
  }

  60% {
    fill : var(--dusk);
    transform: rotateX(-10deg);
  }

  80% {
    fill: var(--camelot);
  }
}

/*
  LAYOUT
*/

.siteMain {
  margin-top: 20vw;
}

.block {
  padding: var(--block-space) var(--gutters);
}

/*
  Containers conform to our grid. Blocks can contain.. err.. containers.. As
  such, a container is kind of dumb. It just sets up our max width.
*/
.container {
  margin: 0 auto;
  max-width: var(--site-width);
}

/*
  Setups the pseudo elements we need to handle visual
  transitions between blocks.
*/
.transition:before,
.transition:after,
.transition--before:before,
.transition--after:after {
  position: absolute;
  left: 0;
  z-index: -1;
  display: block;
  width: 100%;
  background-position: center bottom;
  background-repeat: no-repeat;
  background-size: 110% auto;
  content: "";
}

/*
  LAYOUT: Header
*/

.siteHeader {
  display: flex;
  flex-direction: column;
}

.homelink {
  display: block;
  padding: 5vw 0;
  text-align: center;
}

.guppy {
  width: 10vw;
  min-width: 80px;
  max-width: 180px;
}

.guppy .st0 {
  fill: var(--mandy);
}

.guppy .st1 {
  fill: var(--brick);
}

.guppy .st2 {
  fill: var(--dusk);
}

.guppy .st3 {
  fill: var(--camelot);
}

.guppy .st4 {
  fill: var(--bossanova);
}

.homelink:hover .st0,
.homelink:hover .st1,
.homelink:hover .st2,
.homelink:hover .st3 {
  animation: color-pulse 1s infinite linear;
  transform-origin: center;
}

.homelink:hover .st1 {
  animation-delay: 250ms;
}

.homelink:hover .st2 {
  animation-delay: 500ms;
}

.homelink:hover .st3 {
  animation-delay: 750ms;
}

.slogan,
.newsletter {
  position: relative;
  margin-top: 4vw;
  padding-bottom: 20vw;
  background: var(--bossanova);
}

.slogan:before,
.newsletter:before {
  top: -9vw;
  height: 10vw;
  background-image: url('img/swish.svg');
}

.slogan-text {
  max-width: 30ch;
  font-size: 2rem;
  text-align: center;
  color: #FFFFFF;
}

.siteNav {
  position: relative;
  z-index: 10;
  order: 3;
  background: var(--brick);
}

.siteNav:before,
.siteNav:after {
  height: 10vw;
}

.siteNav:before {
  top: calc(-10vw + 2px);
  background-image: url('img/swish2.svg');
  transform: rotate(-180deg);
}

.siteNav:after {
  bottom: calc(-9vw + 2px);
  background-image: url('img/nav.svg');
  transform: rotate(-180deg);
}

.siteNav ul {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
}

.siteNav li {
  width: 50%;
}

.siteNav a {
  --font-size: 1.3rem;

  display: flex;
  padding: .8em 1em;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  height: calc(var(--font-size) * 2.4);
  font-size: var(--font-size);
  text-align: center;
  text-decoration: none; /* a11y exception */
  font-weight: bold;
  color: #FFFFFF;
}

.siteNav a:hover {
  background: #FFFFFF;
  color: var(--brick);
}

/*
  LAYOUT: Footer
*/

.siteFooter {
  position: relative;
  margin-top: 10vw;
  background: var(--bossanova);
  color: #FFFFFF;
}

.siteFooter:before {
  top: -9vw;
  height: 10vw;
  background-image: url('img/swish.svg');
}


.siteFooter .block-heading {
  font-size: 3rem;
}

.siteFooter .btn {
  color: var(--bossanova)
}

/*
  BLOCKS
  Basically major divisions of the page that aren't header/footer.
*/

.block-header {
  margin-bottom: var(--block-space);
}

.block-heading {
  margin-bottom: var(--space);
}

.work {
  position: relative;
  margin-top: 4vw;
  margin-bottom: 10vw;
}

.work:before,
.work:after {
  height: 10vw;
  background-image: url('img/swish2.svg');
}

.work:before {
  top: -9vw;
  transform: rotate(-180deg);
}

.work:after {
  bottom: -9vw;
}

/* Newsletter block */

.newsletter {
  color: white;
}

.newsletter h1,
.newsletter h2 {
  margin-bottom: var(--block-space);
  text-align: center;
}

.newsletter .copyright {
  margin-top: var(--block-space);
  text-align: center;
}

.newsletterForm {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  flex-flow: row wrap;
  margin: 0 auto var(--space);
  max-width: 500px;
}

.newsletterForm .field {
  margin-right: .35rem;
  flex: 1 1 auto;
}

.newsletterForm .btn {
  color: white;
}

.newsletterForm .btn,
.newsletterForm .email {
  height: 50px;
  border-radius: .35em;
}

.newsletterForm .email {
  display: block;
  width: 100%;
  border: 6px solid var(--finn);
}

.newsletterForm .disclaimer {
  display: block;
  margin: .5rem auto 0;
  max-width: 800px;
  font-size: .65em;
}


/*
  MODULES
  Bits of pieces of HTML that together make a single, compact *thing*. These go
  well with <section>, <form>, or <article>
*/


/* Services */
.services img {
  display: none;
}

.offering {
  margin-bottom: var(--block-space);
}

.offering .subHeading:after {
  background: var(--finn);
}

.offeringList li {
  margin-bottom: var(--space);
  list-style-position: inside;
  list-style-type: disc;
}


/* Work */
.clientList {
  display: flex;
  flex-flow: row wrap;
}

.clientList li {
  display: inline-flex;
  align-items: center;
  margin-bottom: calc(var(--space) * 3);
  margin-right: calc(var(--space) * 3);
}

.clientList img {
  height: 80px;
  max-width: 100%;
}

.clientList .landscape-logo {
  height: 30px;
}


/* About */
.gup {
  margin-top: calc(var(--space) * 2);
}

.gup-avatar {
  display: flex;
  margin: 0 0 var(--space);
  padding: calc(var(--space) * 1.5);
  max-width: 300px;
  min-width: 240px;
  border-radius: 10% 30%;
  background-image: url('img/bio-bg1.svg');
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 180% 150%;
  align-items: center;
  justify-content: center;
}

.gup-avatar img {
  border: 6px solid #FFFFFF;
  border-radius: 10% 30%;
}

.gup:nth-child(odd) .gup-avatar {
  border-radius: 30% 10%;
  background-image: url('img/bio-bg2.svg');
}

.gup:nth-child(odd) img {
  border-radius: 30% 10%;
}

.gup-card {
  flex: 0 1 54ch;
}

.gup-name,
.gup-title {
  margin-bottom: var(--space);
}

.gup-title {
  text-transform: uppercase;
}

/* Contact */
.contactNav {
  margin: 1.5rem 0;
}

.contactNav .btn {
  font-size: 1.8rem;
}

/* Social Icons */
.socialNav {
  margin: 3rem 0;
}

.socialNav a {
  display: inline-block;
  margin-right: 1.5rem;
  box-shadow: none;
}

.socialNav .socialIcon {
  display: inline-block;
  width: 64px;
  height: 64px;
  fill: var(--camelot);
}

.socialNav .socialIcon:hover {
  fill: var(--dusk);
}

.socialNav .socialIcon:last-child {
  margin-right: 0;
}

/*
  LANDING PAGES
*/
.topHat {
  display: block;
  padding: 6px 10px 12px;
  background: whitesmoke;
  font-size: .8rem;
  text-decoration: none;
}

.topHat:before {
  display: inline-block;
  margin-right: .3em;
  height: 1rem;
  width: 1rem;
  content: "←";
}

/*
  MEDIA QUERIES
*/

@media (min-width: 720px) {
  .block-heading,
  .lead,
  .subLead,
  .siteNav ul {
    max-width: 50ch;
  }

  .slogan,
  .newsletter {
    padding-bottom: 12vw;
  }

  .siteNav ul {
    margin: 0 auto;
    justify-content: space-between;
  }

  .siteNav li {
    width: auto;
  }

  .siteMain {
    margin-top: 8vw;
  }

  .services .block-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  /* TODO: Too specific! Bad developer! Bad! */
  .services .block-header .wrap {
    flex: 1;
    margin-right: calc(var(--space) * 2);
  }

  .services .block-header img {
    display: inline-flex;
    min-width: 240px;
  }

  .offeringList {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
  }

  .offeringList li {
    box-sizing: border-box;
    width: 33.33%;
  }

  .clientList {
    max-width: 900px;
  }

  .clientList li {
    display: flex;
    align-items: center;
    margin-right: calc(var(--space) * 6);
  }

  .clientList img {
    height: 100px;
  }

  .clientList .landscape-logo {
    height: 40px;
  }

  .gup {
    display: flex;
  }

  .gup-avatar {
    margin-right: calc(var(--space) * 2);
  }

  .gup-card {
    padding-top: 2rem;
  }
}

@media (min-width: 1000px) {
  :root {
    --font-size        : 20px;
    --block-space      : calc(var(--space) * 3);
  }

  .slogan-text {
    font-size: 3rem;
  }
}

